src/jmm.java
import java.io.BufferedWriter;
import java.io.FileNotFoundException;
import java.io.FileOutputStream;
import java.io.IOException;
import java.io.OutputStreamWriter;

/* jmm.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. jmm.java */
public class jmm/* @bgen(jjtree) */ implements jmmTreeConstants, jmmConstants {/* @bgen(jjtree) */
  protected static JJTjmmState jjtree = new JJTjmmState();
  private static int nErrors = 0;
  private static int MAX_ERRORS = 10;

  public static void main(String args[]) throws ParseException {

    if (args.length != 1) {
      System.out.println("Usage: java jmm <filename>");
      return;
    }

    jmm p;

    try {
      p = new jmm(new java.io.FileInputStream(args[0]));
    } catch (java.io.FileNotFoundException e) {
      System.out.println("error: file " + args[0] + " not found.");
      return;
    }

    SimpleNode root;

    try {
      root = p.Program();
    } catch (ParseException e) {
      System.out.println(e.toString());
      return;
    }

    root.dump("");
    root.semanticAnalysis();
    root.printSymbolTable();

    root.accept(new SemanticAnalyzer());

    writeJasminFile(args[0], root);

   
    System.out.println("Jasmin:\n" + root.getJasmin());
  }

  static void writeJasminFile(String fileName, SimpleNode root){
    String jasminFileName = fileName.replaceFirst("[.][^.]+$", "") + ".j";

    try {
      FileOutputStream fstream = new FileOutputStream(jasminFileName);
      BufferedWriter bw = new BufferedWriter(new OutputStreamWriter(fstream));
      bw.write(root.accept(new JasminGenerator()));
      bw.close();
    } catch (IOException e) {
      // TODO Auto-generated catch block
      e.printStackTrace();
    }
  }

  static void reportError(ParseException e, String statement, boolean recover) {
    System.out.println("Syntatic error on " + statement + " statement.\u005cn\u005cn" +
                       e.toString());
    nErrors++;

    if (recover) {
      recoverFromError();
    }

    if (nErrors >= MAX_ERRORS) {
      System.out.println("Reached maximum number of errors (" + MAX_ERRORS +
                         "). Terminating.");
      System.exit(1);
    }
  }

  static void recoverFromError() {
    Token t;
    do {
      t = getToken(1);
      if (t.kind == R_PAR)
        return;
      t = getNextToken();
    } while (t.kind != R_PAR);
  }

  static final public SimpleNode Program() throws ParseException {/*@bgen(jjtree) Program */
  ASTProgram jjtn000 = new ASTProgram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      ClassDeclaration();
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
                            jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

/**
 * Class declaration
 */
  static final public void ClassDeclaration() throws ParseException {/*@bgen(jjtree) ClassDeclaration */
                           ASTClassDeclaration jjtn000 = new ASTClassDeclaration(JJTCLASSDECLARATION);
                           boolean jjtc000 = true;
                           jjtree.openNodeScope(jjtn000);Token id, ext;
    try {
      jj_consume_token(CLASS);
      id = jj_consume_token(IDENTIFIER);
jjtn000.id = id.image;
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EXTENDS:{
        jj_consume_token(EXTENDS);
        ext = jj_consume_token(IDENTIFIER);
jjtn000.ext = ext.image;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        ;
      }
      jj_consume_token(L_BRACE);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case BOOL:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        VarDeclaration();
      }
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PUBLIC:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(PUBLIC);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case STATIC:{
          MainDeclaration();
          break;
          }
        case INT:
        case BOOL:
        case IDENTIFIER:{
          MethodDeclaration();
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(R_BRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

/**
 * Variable declaration
 */
  static final public void VarDeclaration() throws ParseException {/*@bgen(jjtree) VarDeclaration */
                         ASTVarDeclaration jjtn000 = new ASTVarDeclaration(JJTVARDECLARATION);
                         boolean jjtc000 = true;
                         jjtree.openNodeScope(jjtn000);Token id;
    try {
      Type();
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(SEMICOLON);
      jjtn000.id = id.image;
      // add line and column
      jjtn000.line = id.beginLine;
      jjtn000.column = id.beginColumn;
jjtree.closeNodeScope(jjtn000, true);
                                       jjtc000 = false;
jjtn000.id = id.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

/**
 * Main function declaration
 */
  static final public void MainDeclaration() throws ParseException {/*@bgen(jjtree) MainDeclaration */
                          ASTMainDeclaration jjtn000 = new ASTMainDeclaration(JJTMAINDECLARATION);
                          boolean jjtc000 = true;
                          jjtree.openNodeScope(jjtn000);Token id;
    try {
      jj_consume_token(STATIC);
      jj_consume_token(VOID);
      jj_consume_token(MAIN);
      jj_consume_token(L_PAR);
      jj_consume_token(STRING);
      jj_consume_token(L_BRACKET);
      jj_consume_token(R_BRACKET);
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(R_PAR);
jjtn000.id = id.image;
// add line and column
jjtn000.line = id.beginLine;
jjtn000.column = id.beginColumn;
      jj_consume_token(L_BRACE);
      label_3:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_3;
        }
        VarDeclaration();
      }
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case T:
        case F:
        case THIS:
        case NEW:
        case L_PAR:
        case L_BRACE:
        case NOT:
        case INTEGER_LITERAL:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_4;
        }
        Statement();
      }
      jj_consume_token(R_BRACE);
    } catch (Throwable jjte000) {
if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

/**
 * Method declaration
 */
  static final public void MethodDeclaration() throws ParseException {/*@bgen(jjtree) MethodDeclaration */
                            ASTMethodDeclaration jjtn000 = new ASTMethodDeclaration(JJTMETHODDECLARATION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token id;
    try {
      Type();
      id = jj_consume_token(IDENTIFIER);
      jj_consume_token(L_PAR);
      // add line and column
      jjtn000.line = id.beginLine;
      jjtn000.column = id.beginColumn;
      Args();
      jj_consume_token(R_PAR);
      jj_consume_token(L_BRACE);
      label_5:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_5;
        }
        VarDeclaration();
      }
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:
        case WHILE:
        case T:
        case F:
        case THIS:
        case NEW:
        case L_PAR:
        case L_BRACE:
        case NOT:
        case INTEGER_LITERAL:
        case IDENTIFIER:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_6;
        }
        Statement();
      }
      jj_consume_token(RETURN);
      Expression();
      jj_consume_token(SEMICOLON);
      jj_consume_token(R_BRACE);
jjtree.closeNodeScope(jjtn000, true);
                                                  jjtc000 = false;
jjtn000.id = id.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/**
 * Arguments
 */
  static final public void Args() throws ParseException {/*@bgen(jjtree) Args */
  ASTArgs jjtn000 = new ASTArgs(JJTARGS);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOL:
      case IDENTIFIER:{
        Arg();
        label_7:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case COMMA:{
            ;
            break;
            }
          default:
            jj_la1[6] = jj_gen;
            break label_7;
          }
          jj_consume_token(COMMA);
          Arg();
        }
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
                       jjtree.clearNodeScope(jjtn000);
                       jjtc000 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte000 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte000;}
                     }
                     if (jjte000 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte000;}
                     }
                     {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                       jjtree.closeNodeScope(jjtn000, true);
                     }
    }
  }

/**
 * Argument
 */
  static final public void Arg() throws ParseException {/*@bgen(jjtree) Arg */
              ASTArg jjtn000 = new ASTArg(JJTARG);
              boolean jjtc000 = true;
              jjtree.openNodeScope(jjtn000);Token id;
    try {
      Type();
      id = jj_consume_token(IDENTIFIER);
      jjtn000.id = id.image;
      // add line and column
      jjtn000.line = id.beginLine;
      jjtn000.column = id.beginColumn;

jjtree.closeNodeScope(jjtn000, true);
                                                    jjtc000 = false;
jjtn000.id = id.image;
    } catch (Throwable jjte000) {
if (jjtc000) {
                               jjtree.clearNodeScope(jjtn000);
                               jjtc000 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte000 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte000;}
                             }
                             if (jjte000 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte000;}
                             }
                             {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
                               jjtree.closeNodeScope(jjtn000, true);
                             }
    }
  }

/**
 * Types possible
 *      int[]
 *      boolean
 *      <identifier>
 */
  static final public void Type() throws ParseException {/*@bgen(jjtree) Type */
               ASTType jjtn000 = new ASTType(JJTTYPE);
               boolean jjtc000 = true;
               jjtree.openNodeScope(jjtn000);Token t;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
jjtn000.type = "int";
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case L_BRACKET:{
          jj_consume_token(L_BRACKET);
          jj_consume_token(R_BRACKET);
jjtn000.array = true;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          ;
        }
        break;
        }
      case BOOL:{
        jj_consume_token(BOOL);
jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
jjtn000.type = "bool";
        break;
        }
      case IDENTIFIER:{
        t = jj_consume_token(IDENTIFIER);
jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
jjtn000.type = t.image;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/**
 * Statements
 *      If then else blocks
 *      Assign values
 */
  static final public void Statement() throws ParseException {/*@bgen(jjtree) Statement */
                    ASTStatement jjtn000 = new ASTStatement(JJTSTATEMENT);
                    boolean jjtc000 = true;
                    jjtree.openNodeScope(jjtn000);Token id;
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case L_BRACE:{
        jj_consume_token(L_BRACE);
        label_8:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case IF:
          case WHILE:
          case T:
          case F:
          case THIS:
          case NEW:
          case L_PAR:
          case L_BRACE:
          case NOT:
          case INTEGER_LITERAL:
          case IDENTIFIER:{
            ;
            break;
            }
          default:
            jj_la1[10] = jj_gen;
            break label_8;
          }
          Statement();
        }
        jj_consume_token(R_BRACE);
        break;
        }
      case IF:{
        If();
jjtree.closeNodeScope(jjtn000, true);
           jjtc000 = false;
jjtn000.type = "if";
        break;
        }
      case WHILE:{
        While();
jjtree.closeNodeScope(jjtn000, true);
              jjtc000 = false;
jjtn000.type = "while";
        break;
        }
      case IDENTIFIER:{
        id = jj_consume_token(IDENTIFIER);
jjtn000.type = "id"; jjtn000.id = id.image;
// add line and column
jjtn000.line = id.beginLine;
jjtn000.column = id.beginColumn;
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case L_BRACKET:{
          jj_consume_token(L_BRACKET);
          Expression();
          jj_consume_token(R_BRACKET);
jjtn000.array = true;
          break;
          }
        default:
          jj_la1[11] = jj_gen;

        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ASSIGN:{
          jj_consume_token(ASSIGN);
          Expression();
          jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
                                                                                                                                                                                jjtc000 = false;
jjtn000.assign = true;
          break;
          }
        case L_BRACKET:
        case SEMICOLON:
        case DOT:{
          Expression_Alt();
          jj_consume_token(SEMICOLON);
          break;
          }
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      case T:
      case F:
      case THIS:
      case NEW:
      case L_PAR:
      case NOT:
      case INTEGER_LITERAL:{
        ExpressionNoId();
        jj_consume_token(SEMICOLON);
jjtree.closeNodeScope(jjtn000, true);
                                    jjtc000 = false;
jjtn000.type = "no_id";
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void If() throws ParseException {/*@bgen(jjtree) If */
  ASTIf jjtn000 = new ASTIf(JJTIF);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      try {
        jj_consume_token(IF);
        jj_consume_token(L_PAR);
        Expression();
        jj_consume_token(R_PAR);
        Statement();
        jj_consume_token(ELSE);
        Statement();
      } catch (ParseException e) {
reportError(e, "IF", false);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void While() throws ParseException {/*@bgen(jjtree) While */
  ASTWhile jjtn000 = new ASTWhile(JJTWHILE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(L_PAR);
      try {
        Expression();
      } catch (ParseException e) {
reportError(e, "WHILE", true);
      }
      jj_consume_token(R_PAR);
      Statement();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

/**
 * Expressions    
 */
  static final public void Expression() throws ParseException {
    And();
  }

  static final public void And() throws ParseException {
    LT();
    label_9:
    while (true) {
      if (jj_2_3(2)) {
        ;
      } else {
        break label_9;
      }
      Token t = jj_consume_token(AND);
ASTand jjtn001 = new ASTand(JJTAND);
// add line and column
jjtn001.line = t.beginLine;
jjtn001.column = t.beginColumn;
                                boolean jjtc001 = true;
                                jjtree.openNodeScope(jjtn001);
      try {
        LT();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                  jjtree.clearNodeScope(jjtn001);
                                  jjtc001 = false;
                                } else {
                                  jjtree.popNode();
                                }
                                if (jjte001 instanceof RuntimeException) {
                                  {if (true) throw (RuntimeException)jjte001;}
                                }
                                if (jjte001 instanceof ParseException) {
                                  {if (true) throw (ParseException)jjte001;}
                                }
                                {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                  jjtree.closeNodeScope(jjtn001,  2);
                                }
      }
    }
  }

  static final public void LT() throws ParseException {
    Sum();
    label_10:
    while (true) {
      if (jj_2_4(2)) {
        ;
      } else {
        break label_10;
      }
      Token t = jj_consume_token(LESSTHAN);
ASTlt jjtn001 = new ASTlt(JJTLT);
// add line and column
jjtn001.line = t.beginLine;
jjtn001.column = t.beginColumn;
                                      boolean jjtc001 = true;
                                      jjtree.openNodeScope(jjtn001);
      try {
        Sum();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                        jjtree.clearNodeScope(jjtn001);
                                        jjtc001 = false;
                                      } else {
                                        jjtree.popNode();
                                      }
                                      if (jjte001 instanceof RuntimeException) {
                                        {if (true) throw (RuntimeException)jjte001;}
                                      }
                                      if (jjte001 instanceof ParseException) {
                                        {if (true) throw (ParseException)jjte001;}
                                      }
                                      {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                        jjtree.closeNodeScope(jjtn001,  2);
                                      }
      }
    }
  }

  static final public void Sum() throws ParseException {
    Sub();
    label_11:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_11;
      }
      Token t = jj_consume_token(SUM);
ASTsum jjtn001 = new ASTsum(JJTSUM);
// add line and column
jjtn001.line = t.beginLine;
jjtn001.column = t.beginColumn;
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
      try {
        Sub();
      } catch (Throwable jjte001) {
if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
      } finally {
if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001,  2);
                                 }
      }
    }
  }
